memcached-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: yopass
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: memcached
  ports:
    - protocol: TCP
      port: 11211
      targetPort: 11211
  type: ClusterIP
