yopass-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: yopass
  namespace: yopass
  labels:
    app: yopass
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: yopass
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
