ingress-all.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yopass-ingress
  namespace: yopass
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "yopass-cert"
    networking.gke.io/v1beta1.FrontendConfig: "yopass-security-config"
spec:
  tls:
  - hosts:
    - # Replace with your domain
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: yopass
                port:
                  number: 8082
