monitoring-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "monitoring-cert"
    networking.gke.io/v1beta1.FrontendConfig: "monitoring-security-config"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: kube-prometheus-grafana
      port:
        number: 80
